...
        </ScrollView>
      </View>
    );
  }

  return (
    <View testID="e2e-screen-astrometry__index" className="flex-1 bg-background">
      {/* Header */}
      <View
        className="pb-3"
        style={{
          borderBottomWidth: 0.5,
          borderBottomColor: borderColor,
...
